{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "0a9e9dc0-0b8f-4cc2-92b5-473f99c4b9f4",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "abbdefa7-956e-4cc9-b06e-7221aa2b9e8d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d2fa107c-c386-4118-9c7a-1fa1e29d12f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress1",
                    "type": "Button",
                    "id": "5140dc32-575e-4640-b676-5d37fcc24d7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "a618b961-1e81-4d72-a5c8-71bbafac841d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition1",
                    "type": "PassThrough",
                    "id": "2ca193a5-3141-4db4-8666-341a0986a39a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be9fd754-65fb-4ecf-923a-3db1aa23c966",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8294dc9-747c-42a6-86ad-bd84b0af2fde",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca1a1cfd-f0e4-4b7f-b77d-359cbb97eedf",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7ef003c-9c66-4ca5-97d3-8ec367522bc0",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f027a56-4d15-4b69-b074-d38d4f56366a",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}